<?xml version="1.0"?>
<package format="2">
  <name>visual_servoing_teleop</name>
 <version>0.1.0</version>
  <description>visual_servoing_teleop provides a gui for teleoperation of visual servoing</description>
  <maintainer email="laurapetrich@ualberta.ca">lpetrich</maintainer>

  <license>BSD</license>
  <author>Laura Petrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend version_gte="0.2.19">python_qt_binding</depend>
  <depend>python-rospkg</depend>
  <depend>rostopic</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
